updated home page

--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 ---
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
+layout: single
 author_profile: true
 ---
+
+My areas of interest include Reinforcement Learning, Deep Learning, Autonomous Vehicles, Robotics, and Control Systems. I enjoy tackling complex problems and turning theoretical concepts into practical applications.
+
+This website serves as my professional and academic hub, where I share my projects, writings, and interests. Feel free to explore my work and get in touch!
